<resources>
    <string name="app_name">Daily Qoutes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="positive_qoutes">Positive Qoutes</string>
    <string name="life_qoutes">Life Qoutes</string>
    <string name="inspirational_qoutes">Inspirational Qoutes</string>
    <string name="relationship_qoutes">RelationShip Qoutes</string>
    <string name="madapp1996_gmail_com">MadApp1996@gmail.com</string>
    <string name="friendship_qoutes">FriendShip Qoutes</string>
    <string name="unlike">Unlike</string>
    <string name="favorite_qoutes">Favorite Qoutes</string>
    <string name="motivational_qoutes">Motivational Qoutes</string>
    <string name="this_is_a_sample_quote_you_can_write_anything_you_want">This is a sample quote. You can write anything you want.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_daily_qoutes">Welcome To Daily Qoutes</string>
</resources>
